Bug 148291 - line break clear="right" renders wrong for floating object left in RTL
Summary: line break clear="right" renders wrong for floating object left in RTL
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.5.0 target:7.4.1
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-31 12:03 UTC by Regina Henschel
Modified: 2024-09-27 14:27 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
RTL text with line break clear="right" (238.58 KB, application/zip)
2022-03-31 12:03 UTC, Regina Henschel
Details
The similar situation with clear="left" (238.50 KB, application/zip)
2022-03-31 12:04 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2022-03-31 12:03:47 UTC
Created attachment 179235 [details]
RTL text with line break clear="right"

Open attached document. The text is in RTL writing mode. If the floating object is left, the clear="right" line break should be treated as normal line break. But that is not the case here.

The mirrored situation with clear="left" works as expected.

BTW, rendering in Word is faulty and not suitable for comparison.
Comment 1 Regina Henschel 2022-03-31 12:04:37 UTC
Created attachment 179236 [details]
The similar situation with clear="left"
Comment 2 Commit Notification 2022-07-27 18:26:18 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4e329f50e42c91704b84b1fc583d6815ab22adab

tdf#148291 sw clearing breaks: fix RTL layout

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-07-28 10:23:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/fd4322238737ed90b6ab21fdd07ddc0688e7d9a0

tdf#148291 sw clearing breaks: fix RTL layout

It will be available in 7.4.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.