tdf#148291 sw clearing breaks: fix RTL layout

The bugreport has two documents that show clear=left and clear=right is
basically ignored in Word in the RTL paragraph case, while clear=none
and clear=all work as expected.

There was no special-casing for RTL in SwBreakPortion::Format()
previously, as the OOXML spec does talk about left/right even in case of
RTL, i.e. no expected mirroring is documented as the behavior. Looking
at [MS-OI29500], "2.1.528 Part 1 Section 17.18.3, ST_BrClear" does say
that the Word "behaves unpredictably" in the normal (non-web) layout.

Fix the problem by handling clear=left and clear=right as clear=none in
the RTL case, this fixes the rendering differences for both
bugdocuments.

If later we do want the mirrored layout, then such mirroring could be
done in SwTextFly::GetMaxBottom().

Change-Id: I6265e64540fa9e5b893cfbea146152854416dce2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137507
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 4e329f50e42c91704b84b1fc583d6815ab22adab)